--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react-dom": "^18.2.7",
     "@types/recharts": "^1.8.24",
     "@types/xlsx": "^0.0.36",
+    "dexie": "^3.2.4",
+    "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/luxon": "^3.3.1"
   }
 }
