--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "serve":"serve -s prod",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
