--- a/package.json
+++ b/package.json
@@ -56,5 +56,11 @@
   },
   "devDependencies": {
     "@types/luxon": "^3.3.1"
+  },
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "outDir": "out",
+    "sourceMap": true
   }
 }
