--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/recharts": "^1.8.24",
     "@types/xlsx": "^0.0.36",
     "dexie": "^3.2.4",
+    "lodash": "^4.17.21",
     "luxon": "^3.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.197",
     "@types/luxon": "^3.3.1"
   },
   "compilerOptions": {
