--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,5 +21,5 @@ jobs:
       run: |
         echo "$PRIVATEKEY" > deploy_key.pem
         chmod 600 deploy_key.pem
-        rsync -rav -v -e "ssh -i -v deploy_key.pem -o StrictHostKeyChecking=no" ./ $USER@$HOST:/myapp/trakk/
+        rsync -v -rav  -e "ssh -v -i deploy_key.pem -o StrictHostKeyChecking=no" ./ $USER@$HOST:/myapp/trakk/
         rm -f deploy_key.pem
