--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.6.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
